# polymarket-latency-arb

./: .env  .env.example  .env.paper  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  OPTIMIZATION_SUMMARY.md  README.md  SPREAD_BASED_STRATEGY.md  dashboard.html  simulation.json  todo.md
docs/: production.md
src/: error.rs  main.rs
src/arb/: engine.rs  mod.rs
src/config/: mod.rs
src/execution/: actor.rs  exit.rs  live.rs  mod.rs  model.rs  paper.rs  planner.rs  shared.rs
src/polymarket/: clob_client.rs  market_data.rs  mod.rs  stream.rs
src/rtds/: mod.rs  stream.rs
src/server/: mod.rs
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  api.ts  format.ts  styles.css  types.ts  useTerminalFeed.ts
