[package]
name = "polymarket-latency-arb"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
url = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
dotenvy = "0.15"
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }
futures = "0.3"
polymarket-client-sdk = { version = "0.4", features = ["clob"] }
k256 = "0.13.4"

[dependencies.tokio-tungstenite]
version = "0.26"
features = ["native-tls"]

[dependencies.tungstenite]
version = "0.26"
features = ["native-tls"]

[dependencies.futures-util]
version = "0.3"

[dependencies.rust_decimal]
version = "1"
features = ["serde"]
