[package]
name = "lattice-terminal"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 0
debug = 0        # skip debug symbols = faster link

[profile.release]
opt-level = 3
lto = "thin"     # faster than full LTO, still good optimization
codegen-units = 1

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
url = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
dotenvy = "0.15"
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }
futures = "0.3"
polymarket-client-sdk = { version = "0.4", features = ["clob", "ctf"] }
k256 = "0.13.4"
alloy = { version = "1.8.3", features = ["providers", "contract", "sol-types", "network", "signers", "signer-local"] }
hex = "0.4.3"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "chrono", "json"] }

[dependencies.tokio-tungstenite]
version = "0.26"
features = ["native-tls"]

[dependencies.tungstenite]
version = "0.26"
features = ["native-tls"]

[dependencies.futures-util]
version = "0.3"

[dependencies.rust_decimal]
version = "1"
features = ["serde"]
